fixed overflowing menu

--- a/src/app.css
+++ b/src/app.css
@@ -2,5 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
-* {
+@layer base {
+	html,
+	body,
+	#svelte {
+		@apply w-full h-full;
+	}
 }
